# ai-marketing-tutorials

./: LICENSE  README.md
brand_mentions_AI/: hello.py  main.py  pyproject.toml
brand_sentiment/: analysis.py  output.json
brand_sentiment/reports/: analysis_report.txt  positive_report.txt
get_started_hf/: main.py  pyproject.toml  qwen_chatbot.py
repurposing_video_to_LI/: get_transcript.py  pyproject.toml  repurposed.txt  repurposing.py  transcript.json
reviews_analysis/: README.md  analysis.py  extraction.py  pyproject.toml
reviews_analysis/reports/: analysis_report.txt  negative_report.txt  positive_report.txt
