[project]
name = "get-started-hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "hf-xet>=1.1.2",
    "huggingface-hub>=0.31.2",
    "llama-cpp-python>=0.3.9",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
